# multiplayer-snakes

./: .gitignore  README.md
client/: CMakeLists.txt  main.c
client/clientcore/: clientcore.h
client/gameclient/: gameclient.c  gameclient.h
client/window/: window.c  window.h
core/: core.c  core.h
server/: CMakeLists.txt  main.c
server/game/: game.h
server/gameserver/: gameserver.c  gameserver.h
server/models/: game.c  game.h  snake.c  snake.h
server/servercore/: servercore.c  servercore.h
server/shared/: shared.h
server/snake/: snake.h
